implemented default request for web applications; setting a default-request will forward all requests which do not have a valid mapping to this specific request. Here you can process additional information, forward to a landing page, etc
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@509068 13f79535-47bb-0310-9956-ffa450edef68